--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="kontener" id="kontener">
     <div class="dalemnya_kontener">
-      <h1 class="judul_halaman">I Like U</h1>
+      <h1 class="judul_halaman">I Like U from Bima</h1>
       <a class="tombol_menu" onclick="klikMenu()"></a>
       <section class="halaman1 dalemnya_halaman" onclick="PindahKeHalaman(0)">
         <h1 class="judul_halaman">Aku</h1>
