--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I Got U</title>
-  <meta name="description" content="Semangat beraktifitas ya Sesep✨">
+  <meta name="description" content="Semangat beraktifitas ya Viii✨">
   <meta name="author" content="Wafa Rifqi Anafin">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/efekteks.css">
@@ -20,7 +20,7 @@
   <!--Author    : zerrstarr-->
   <!--Instagram : @zerrstarr_-->
   <div class="kontener2" id="kontener2">
-    <h1>Hai Sesep✨</h1>
+    <h1>Hai Viii✨</h1>
     <button class="tombol" id="tombol">Mulai Sekarang</button>
   </div>
 
@@ -39,7 +39,7 @@
         </div>
       </section>
       <section class="halaman2 dalemnya_halaman" onclick="PindahKeHalaman(1)">
-        <h1 class="judul_halaman">Sesep✨</h1>
+        <h1 class="judul_halaman">Viii✨</h1>
         <br>
         <img src="gambar/gambar2.jpg" alt="Web Bucin Html, Css, Js" class="gambar">
         <br>
@@ -69,19 +69,19 @@
           var jam = hari.getHours();
           if (jam >= 0 && jam < 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Pagi Sesep✨!</h1><p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat hanya kamu. Daa Sesep✨ <3<p>"
+              "<h1 class='ucapan'>Selamat Pagi Viii✨!</h1><p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat hanya kamu Viii✨ <3<p>"
             );
           } else if (jam == 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Sesep✨!</h1><p class='isiucapan'>Jangan Lupa Makan Yaa Sesep✨. Daa Sesep✨ <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Viii✨!</h1><p class='isiucapan'>Jangan Lupa Makan Yaa Viii✨. Daa Viii✨ <3<p>"
             );
           } else if (jam >= 12 && jam <= 17) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Sesep✨!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya Sesep✨. Daa Sesep✨ <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Viii✨!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya Viii✨. <3<p>"
             );
           } else {
             document.write(
-              "<h1 class='ucapan'>Selamat Malam !</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu. Daa Sesep✨ <3<p>"
+              "<h1 class='ucapan'>Selamat Malam !</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu ya Viii✨ <3<p>"
             );
           }
           document.write("</center>");
