--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="kontener" id="kontener">
     <div class="dalemnya_kontener">
-      <h1 class="judul_halaman">I Like U from Bima</h1>
+      <h1 class="judul_halaman">exsinces</h1>
       <a class="tombol_menu" onclick="klikMenu()"></a>
       <section class="halaman1 dalemnya_halaman" onclick="PindahKeHalaman(0)">
         <h1 class="judul_halaman">Aku</h1>
@@ -39,7 +39,7 @@
         </div>
       </section>
       <section class="halaman2 dalemnya_halaman" onclick="PindahKeHalaman(1)">
-        <h1 class="judul_halaman">Viii✨</h1>
+        <h1 class="judul_halaman">Cinta</h1>
         <br>
         <img src="gambar/gambar2.jpg" alt="Web Bucin Html, Css, Js" class="gambar">
         <br>
@@ -60,7 +60,7 @@
         </div>
       </section>
       <section class="halaman4 dalemnya_halaman" onclick="PindahKeHalaman(3)">
-        <h1 class="judul_halaman">Ayu Septi Damayanti</h1>
+        <h1 class="judul_halaman">CLEMENTINE OVINA DENINTA</h1>
         <br>
         <h1 id="waktu"></h1>
         <script type="text/javascript">
