--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         </div>
       </section>
       <section class="halaman4 dalemnya_halaman" onclick="PindahKeHalaman(3)">
-        <h1 class="judul_halaman">CLEMENTINE OVINA DENINTA</h1>
+        <h1 class="judul_halaman">CLEMENTINE 
+OVINA DENINTA</h1>
         <br>
         <h1 id="waktu"></h1>
         <script type="text/javascript">
