--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I Got U</title>
   <meta name="description" content="Semangat beraktifitas ya Viii✨">
-  <meta name="author" content="Wafa Rifqi Anafin">
+  <meta name="author" content="zerrstarr">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/efekteks.css">
   <link rel="stylesheet" href="css/responsif.css">
@@ -20,8 +20,8 @@
   <!--Author    : zerrstarr-->
   <!--Instagram : @zerrstarr_-->
   <div class="kontener2" id="kontener2">
-    <h1>Hai Viii✨</h1>
-    <button class="tombol" id="tombol">Mulai Sekarang</button>
+    <h1>Hallo Viii✨</h1>
+    <button class="tombol" id="tombol">Buat Kamu</button>
   </div>
 
   <div class="kontener" id="kontener">
@@ -60,8 +60,7 @@
         </div>
       </section>
       <section class="halaman4 dalemnya_halaman" onclick="PindahKeHalaman(3)">
-        <h1 class="judul_halaman">CLEMENTINE 
-OVINA DENINTA</h1>
+        <h1 class="judul_halaman">CLEMENTINE OVINA DENINTA</h1>
         <br>
         <h1 id="waktu"></h1>
         <script type="text/javascript">
@@ -74,11 +73,11 @@ OVINA DENINTA</h1>
             );
           } else if (jam == 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Viii✨!</h1><p class='isiucapan'>Jangan Lupa Makan Yaa Viii✨. Daa Viii✨ <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Viii✨!</h1><p class='isiucapan'>Jangan Lupa Makan Yaa Viii✨ <3<p>"
             );
           } else if (jam >= 12 && jam <= 17) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Viii✨!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya Viii✨. <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Viii✨!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya Viii✨ <3<p>"
             );
           } else {
             document.write(
